Fix comment alignment issue

--- a/styles/public/_comentarios.scss
+++ b/styles/public/_comentarios.scss
@@ -48,7 +48,7 @@
     margin-top: 0.7rem;
     margin-bottom: 0.7rem;
 
-	p {
+	> p {
 		display: flex;
 		align-items: center;
 		img {
